--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-    <form class="mb-5" action="http://localhost:8080/todo/item" method="post" id="newTaskForm">
+    <form class="mb-5" action="http://localhost:8080/todo/item.do" method="post" id="newTaskForm">
         <h4 class="mb-1">Create new task</h4>
         <div class="form-group">
             <label for="descTextarea">Description</label>
@@ -56,13 +56,13 @@
         $(".is-done-check").change(function () {
             if (this.checked) {
                 $.ajax({
-                    url: 'http://localhost:8080/todo/item?action=setDone&id=' + $(this).data("id")
+                    url: 'http://localhost:8080/todo/item.do?action=setDone&id=' + $(this).data("id")
                 }).done(function () {
                     viewTodoTable();
                 });
             } else {
                 $.ajax({
-                    url: 'http://localhost:8080/todo/item?action=setUndone&id=' + $(this).data("id")
+                    url: 'http://localhost:8080/todo/item.do?action=setUndone&id=' + $(this).data("id")
                 }).done(function () {
                     viewTodoTable();
                 });
@@ -88,10 +88,10 @@
     function fillTodoTable(flag) {
         let url;
         if (flag === "viewAll") {
-            url = "http://localhost:8080/todo/item?action=getAll";
+            url = "http://localhost:8080/todo/item.do?action=getAll";
         }
         if (flag === "viewUndone") {
-            url = "http://localhost:8080/todo/item?action=getAllUndone";
+            url = "http://localhost:8080/todo/item.do?action=getAllUndone";
         }
         $.getJSON(url, function (data) {
             $('#todoBody').empty();
